@@ -2,6 +2,7 @@
     - blacklist: blacklist file is now human-readable/editable (thanks Armando Miraglia)
     - fix syslog format detection on hosts with undefined hostname
     - fix ipfw backend crashing when blacklist is enabled but empty on start-up (thanks Jin Choi)
+    - hosts backend: ensure safe permission for tcpwrappers file regardless of the local umask
 
 * 1.5       Feb 2011
     - logsucker: sshguard polls multiple log files at once
